--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <body>
       <div id="container">
   </body>
-  <script type="module" src="dist/index.js" ></script>
+  <script type="module" src="index.js" ></script>
 </html>
