--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css">
     <title>Marching Squares Metaball 2D</title>
   </head>
   <body>
-      <div id="container">
+    <div id="container"></div>
+    <script type="module" src="/src/index.ts"></script>
   </body>
-  <script type="module" src="index.js" ></script>
 </html>
